--- a/exercise-0.4
+++ b/exercise-0.4
@@ -5,7 +5,6 @@
     server-->>-browser: HTML document
     deactivate server
     
-    
     browser->>+server: GET https://studies.cs.helsinki.fi/exampleapp/notes
     activate server
     server-->>-browser: HTML document
@@ -24,5 +23,10 @@
     browser->>+server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
     activate server
     server-->>-browser: [{ "content": "h", "date": "2023-01-23T21:29:40.911Z"}, ... ]
+    deactivate server
+    
+    browser->>+server: GET https://studies.cs.helsinki.fi/favicon.ico
+    activate server
+    server-->>-browser: HTML document
     deactivate server
  ```
